<resources>
    <string name="app_name">AndroidProject</string>
    <string name="addMedications">Add Medications</string>
    <string name="MedName">Enter Medicine Name</string>
    <string name="MedForm">Choose Medicine Form</string>
    <string name="MedStrength">Choose Medicine Strength</string>
    <string name="MedReason">The reason of taking this drug</string>
    <string name="MedRecurrency">The Recurrence of taking this drug</string>
    <string name="MedDosages">The Recurrence of taking this drug per day</string>
    <string name="MedDuration">Enter the duration of treatment</string>
    <string name="RefillReminder">Refill Reminder</string>
    <string name="RefillItem">The total number of items</string>
    <string name="RefillLimit">Limit wanted reminded to refill</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">close navigation drawer</string>

    <string-array name="Medicine_forms">
        <item>Pill</item>
        <item>Solution</item>
        <item>Injection</item>
        <item>Powder</item>
        <item>Drops</item>
        <item>Inhaler</item>

    </string-array>

    <string-array name="Medicine_Strength">
        <item>g</item>
        <item>mg</item>
        <item>IU</item>
        <item>mcg</item>
        <item>mcg/ml</item>
        <item>mEq</item>
        <item>mL</item>
        <item>%</item>
        <item>mg/g</item>
        <item>mg/cm2</item>
        <item>mg/ml</item>
        <item>mcg/hr</item>

    </string-array>
    <string-array name="Medicine_Recurrency">
        <item>Once a week</item>
        <item>Every day</item>
        <item>Every 2 days</item>
        <item>Every 3 days</item>
        <item>2 days a week</item>
        <item>3 days a week</item>
        <item>Every 28 days</item>
        <item>5 days a week</item>
        <item>Only as needed</item>
    </string-array>
    <string-array name="Medicine_Dosages">
        <item>Morning</item>
        <item>Noon</item>
        <item>Evening</item>
        <item>Night</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Strength">Strength</string>
    <string name="reminderstimes">Reminder</string>
    <string name="MedicationName">Medication Name</string>
    <string name="doneButton">Done</string>
    <string name="txtview">Edit Medication</string>
    <string name="Reminders">Reminders</string>
    <string name="Suspend">Suspend</string>
    <string name="Refill">Refill</string>
    <string name="PrescriptionRefill">Prescription Refill</string>
    <string name="pillsLeft">pills left</string>
    <string name="Rxnumber">Rx Number:</string>
    <string name="RefillreminderwhenIhave">Refill Reminder when I have</string>
    <string name="medremaining">meds remaining</string>
    <string name="howtouse">How to use</string>
    <string name="adddrug">Add Dose</string>
    <string name="Login">Login in Using</string>
    <string name="Email">Email Address</string>
    <string name="Password">Password</string>
    <string name="LoginForm">SIGN IN</string>
    <string name="FullName">Full Name</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="Register">Register</string>
    <string name="CreateNewAccountButton">Create New Account</string>
    <string name="GoToLoginButton">go To Login</string>
    <string name="GoToLoginBtn">Go To Login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="txt">Please verify your Email Address</string>
    <string name="btn">Verify</string>
    <string name="button">Verify Now</string>
    <string name="logoutbtn">LogOut</string>
    <string name="SignUp">SignUp</string>
    <string name="SignUpbtn">Sign Up</string>
    <string name="SignInBtn">Sign in</string>
    <string name="SignIN">Sign in</string>
    <string name="reason">Reason Of Taking Drug</string>
    <string name="signup">Sign Up</string>
    <string name="SIGNUP">Sign Up</string>


</resources>