<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/drugScreenAppBarLayout"

        android:layout_width="408dp"
        android:layout_height="162dp"
        android:layout_marginEnd="3dp"

        android:background="#e1f5fe"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.DayNight.ActionBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/backdrugscreenbtn"
                android:layout_width="82dp"
                android:layout_height="35dp"
                android:background="@drawable/back_arrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/editDrugItemButton"
                android:layout_width="43dp"
                android:layout_height="38dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/edit_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/deleteDrugItem"
                android:layout_width="43dp"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="72dp"
                android:background="@drawable/delete_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/drugItemNameextView"
                android:layout_width="112dp"
                android:layout_height="42dp"
                android:layout_marginEnd="188dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.55" />

            <TextView
                android:id="@+id/drugAmountTextView"
                android:layout_width="112dp"
                android:layout_height="44dp"
                android:layout_marginTop="52dp"
                android:layout_marginEnd="188dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editDrugItemButton" />

            <ImageView
                android:id="@+id/imageViewdrugscreen"
                android:layout_width="71dp"
                android:layout_height="55dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="29dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/backdrugscreenbtn"
                app:srcCompat="@drawable/drug" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/txtVw"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginTop="4dp"
        android:text="@string/Reminders"
        android:textAlignment="textStart"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drugScreenAppBarLayout" />

    <ListView
        android:id="@+id/reminderDruglistView"
        android:layout_width="281dp"
        android:layout_height="121dp"
        android:layout_marginEnd="128dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drugScreenAppBarLayout"
        app:layout_constraintVertical_bias="0.083" />

    <Button
        android:id="@+id/suspendDrugItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/Suspend"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/drugScreenAppBarLayout" />

    <TextView
        android:id="@+id/TextView10"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:text="@string/PrescriptionRefill"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reminderDruglistView" />

    <TextView
        android:id="@+id/noOfRemeningPills"
        android:layout_width="121dp"
        android:layout_height="29dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextView10" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="166dp"
        android:layout_height="33dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="14dp"
        android:text="@string/pillsLeft"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toStartOf="@+id/refillbutton"
        app:layout_constraintStart_toEndOf="@+id/noOfRemeningPills"
        />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="126dp"
        android:layout_height="34dp"
        android:text="@string/Rxnumber"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noOfRemeningPills"
        app:layout_constraintVertical_bias="0.042" />

    <TextView
        android:id="@+id/numberofRxTextView"
        android:layout_width="177dp"
        android:layout_height="28dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="110dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/remainingpillstxtview"
        android:layout_width="75dp"
        android:layout_height="30dp"
        android:layout_marginTop="232dp"
        android:layout_marginEnd="152dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/suspendDrugItem" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="107dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="44dp"
        android:text="@string/medremaining"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberofRxTextView" />

    <Button
        android:id="@+id/refillbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Refill"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/suspendDrugItem" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="149dp"
        android:layout_height="38dp"
        android:layout_marginTop="32dp"
        android:text="@string/howtouse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remainingpillstxtview" />

    <TextView
        android:id="@+id/theusagewaytxtView"
        android:layout_width="197dp"
        android:layout_height="54dp"
        android:layout_marginBottom="228dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/adddrugButton"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginTop="244dp"
        android:text="@string/adddrug"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remainingpillstxtview" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="182dp"
        android:layout_height="33dp"
        android:layout_marginTop="16dp"
        android:text="@string/RefillreminderwhenIhave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

</androidx.constraintlayout.widget.ConstraintLayout>