<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/MedicineRefillTextView"
        android:layout_width="232dp"
        android:layout_height="61dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="73dp"
        android:gravity="center"
        android:text="@string/RefillReminder"
        android:textColor="@color/very_dark_gray"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/MedicineItemEditText"
        android:layout_width="118dp"
        android:layout_height="52dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="152dp"
        android:hint="Example : 30 "
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalItemTextView" />

    <Button
        android:id="@+id/NextRefillBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="152dp"
        android:background="@color/dark_gray"
        android:text="Next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MedicineLimitEditText" />

    <TextView
        android:id="@+id/totalItemTextView"
        android:layout_width="238dp"
        android:layout_height="40dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="8dp"
        android:text="@string/RefillItem"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MedicineRefillTextView" />

    <TextView
        android:id="@+id/MedicineLimitTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/RefillLimit"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MedicineItemEditText" />

    <EditText
        android:id="@+id/MedicineLimitEditText"
        android:layout_width="129dp"
        android:layout_height="48dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="4dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="5"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MedicineLimitTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>